# NeonFSLib

./: CMakeLists.txt  LICENSE-DEPENDENCIES.txt  NeonFSLib.cpp  NeonFSLib.h  README.md  THIRD_PARTY.md
docs/: README.md
docs/core/: Result.md  ResultUsage.md  SecureAllocator.md  SecureAllocatorUsage.md
docs/internal/core/: Result.md  SecureAllocator.md
docs/internal/security/: AESEncryptionProviderUsage.md  AESGCMCtx.md  AESGCMCtxUsage.md  KeyManager.md  KeyManagerUsage.md
docs/internal/storage/: BlockStorage.md  BlockStorageUsage.md
docs/internal/utility/: FileSystemUtils.md  FileSystemUtilsUsage.md
docs/security/: AESEncryptionProvider.md  AESEncryptionProviderUsage.md  AESGCMCtx.md  AESGCMCtxPool.md  AESGCMCtxPoolUsage.md  AESGCMCtxUsage.md  KeyManager.md
docs/storage/: BlockStorage.md
include/NeonFS/: result.hpp
include/NeonFS/core/: interfaces.h  result.hpp  secure_allocator.hpp  types.h
include/NeonFS/security/: aes_encryption_provider.h  aes_gcm_ctx.h  aes_gcm_ctx_pool.h  key_manager.h
include/NeonFS/storage/: block_storage.h
include/NeonFS/utility/: file_system_utils.h
src/security/: aes_encryption_provider.cpp  aes_gcm_ctx.cpp  aes_gcm_ctx_pool.cpp  key_manager.cpp
src/storage/: block_storage.cpp
src/utility/: file_system_utils.cpp
tests/: CMakeLists.txt  result_tests.cpp
tests/core/: result_tests.cpp  secure_allocator_tests.cpp
tests/security/: aes_encryption_provider_tests.cpp  aes_gcm_ctx_pool_tests.cpp  aes_gcm_ctx_tests.cpp
tests/storage/: block_storage.cpp  block_storage_tests.cpp
